# pam-vpn

./: .gitignore  Cargo.toml  Makefile  README.md  bootstrap.sh  test.c
crates/gpms-verifier/: Cargo.toml
crates/gpms-verifier/src/: main.rs
crates/gpms-verifier/src/gpms/: mod.rs
crates/pam-vpn/: Cargo.toml
crates/pam-vpn/src/: watcher.rs
crates/pam-vpn/src/vpn/: mod.rs  openvpn.rs
scripts/docker/: Dockerfile  install.sh  run.sh  server.conf
scripts/e2e/: Dockerfile  client.conf  get-keys.sh  install.sh  pam-vpn  run.sh  server.conf  test.conf
src/: lib.rs
src/vpn/: credential.rs  mod.rs  openvpn.rs
