[package]
name = "pam-vpn"
version = "0.1.0"
edition = "2021"
authros = ["Sehyun Park"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pam_vpn"
crate-type = ["cdylib"]

[dependencies]
pam-bindings = "0.1.1"

thiserror = "1.0"
anyhow = "1.0"
